Fixed readAllBytes problem with Java 1.8