@@ -1,14 +1,18 @@
 package fi.fmi.avi.converter.iwxxm.v2_1;
 
-import static junit.framework.TestCase.assertSame;
 import static junit.framework.TestCase.assertEquals;
+import static junit.framework.TestCase.assertSame;
 import static junit.framework.TestCase.assertTrue;
 import static org.junit.Assert.assertFalse;
 
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
-import java.nio.charset.StandardCharsets;
+import java.net.URISyntaxException;
+import java.nio.file.Files;
+import java.nio.file.Paths;
+
+import com.fasterxml.jackson.databind.ObjectMapper;
 
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -17,8 +21,6 @@ import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 import org.springframework.test.context.support.AnnotationConfigContextLoader;
 import org.w3c.dom.Document;
-
-import com.fasterxml.jackson.databind.ObjectMapper;
 
 import fi.fmi.avi.converter.AviMessageConverter;
 import fi.fmi.avi.converter.ConversionResult;
@@ -49,15 +51,14 @@ public class AIRMETIWWXXMSerializerTest {
     }
 
     protected String readFromFile(final String fileName) throws IOException {
-        try (InputStream inputStream = this.getClass().getResourceAsStream(fileName)) {
-            if (inputStream != null) {
-                return new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
-            } else {
-                throw new FileNotFoundException("Resource '" + fileName + "' could not be loaded");
-            }
+        try {
+            return new String(Files.readAllBytes(Paths.get(getClass().getResource(fileName).toURI())));
+        } catch (URISyntaxException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+            throw new FileNotFoundException("Resource '" + fileName + "' could not be loaded");
         }
     }
-
     public String  doTestAIRMETStringSerialization(final String fn) throws Exception {
         assertTrue(converter.isSpecificationSupported(IWXXMConverter.AIRMET_POJO_TO_IWXXM21_STRING));
         final AIRMET s = readFromJSON(fn);
